--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="race_code">Race Code</string>
     <string name="save">Save</string>
 
+    <string name="nothing_to_show">Nothing to show.</string>
 </resources>
