--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="save">Save</string>
 
     <string name="nothing_to_show">Nothing to show.</string>
+
+    <string name="key_edit_existing">edit_existing</string>
 </resources>
