--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,14 @@
     <string name="race_code">Race Code</string>
     <string name="save">Save</string>
 
+    <!-- Message when no data. -->
     <string name="nothing_to_show">Nothing to show.</string>
 
+    <!-- Keys. -->
+    <string name="key_edit_type">edit_type</string>
     <string name="key_edit_existing">edit_existing</string>
+
+    <!-- Values. -->
+    <string name="edit_type_new">edit_type_new</string>
+    <string name="edit_type_existing">edit_type_existing</string>
 </resources>
