--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="rc_G">G</string>
     <string name="rc_S">O</string>
     <!-- City Codes -->
-    <string name="city_codes_title">Select a City Code</string>
+    <string name="cc_title">Select a City Code</string>
 
     <!-- Meeting keyboard. -->
     <string name="lbl_value_required">A value is required.</string>  <!-- Toast -->
