--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,20 +19,17 @@
     <!-- Message when no data. -->
 
     <!-- Keys. -->
+    <string name="key_general">key</string>
     <string name="key_edit_type">edit_type</string>
     <string name="key_edit_existing">edit_existing</string>
 
     <!-- Values. -->
 
-    <!-- Dialog. -->
-    <!-- Race Codes-->
-    <string name="rc_title">Select a Race Code</string>
-    <string name="rc_R">R</string>
-    <string name="rc_T">T</string>
-    <string name="rc_G">G</string>
-    <string name="rc_S">O</string>
+    <!-- *** Dialogs. *** -->
     <!-- City Codes -->
+    <string name="cc_tag">city_codes_dialog</string>
     <string name="cc_title">Select a City Code</string>
+    <string name="cc_no_selection">No City Code was selected.</string>
     <string name="cc_A">A</string>
     <string name="cc_B">B</string>
     <string name="cc_C">C</string>
@@ -51,5 +48,24 @@
     <string name="cc_V">V</string>
     <string name="cc_X">X</string>
     <string name="cc_Z">Z</string>
+    <!-- Race Codes-->
+    <string name="rc_tag">race_codes_dialog</string>
+    <string name="rc_title">Select a Race Code</string>
+    <string name="rc_no_selection">No Race Code was selected.</string>
+    <string name="rc_R">R</string>
+    <string name="rc_T">T</string>
+    <string name="rc_G">G</string>
+    <string name="rc_S">O</string>
+    <!-- Number pad. -->
+    <string name="np_tag">number_pad_dialog</string>
+    <string name="np_title_race_no">Enter a Race Number</string>
+    <string name="np_title_race_sel">Enter a Race Selection</string>
+    <string name="np_no_raceno_sel">No Race number was selected.</string>
+    <string name="np_no_race_sel">No Race selection was made.</string>
+    <!-- Time picker. -->
+    <string name="tp_tag">time_pick_dialog</string>
+
+    <!-- Snackbar. -->
+    <string name="sb_show">Show</string>
 
 </resources>
