--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,7 @@
     <string name="abbrv_race_sel">8</string>
     <string name="abbrv_race_code">R</string>
 
+    <!-- Time. -->
+    <string name="time_format_24hr">kk:mm</string>
+
 </resources>
