--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <!-- Menu labels. -->
     <string name="lbl_refresh">Refresh</string>
     <string name="lbl_settings">Settings</string>
+    <string name="lbl_add">New</string>
 
     <!-- Keys. -->
     <string name="key_general">key</string>
