--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,14 @@
         <item>S</item>
     </string-array>
 
+    <!-- Requirement for ListPreference. -->
+    <string-array name="raceCodesVals">
+        <item>R</item>
+        <item>T</item>
+        <item>G</item>
+        <item>S</item>
+    </string-array>
+
     <!-- RaceNum array. -->
     <string-array name="raceNum">
         <item>1</item>
