--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <!-- Button labels. -->
     <string name="lbl_cancel">Cancel</string>
     <string name="lbl_ok">OK</string>
-    <string name="lbl_time">Time</string>
+    <string name="lbl_time">Set time</string>
     <string name="lbl_save">Save</string>
     <string name="lbl_copy">Copy</string>
     <string name="lbl_update">Update</string>
@@ -185,5 +185,19 @@
     <string name="abbrv_race_no">8</string>
     <string name="abbrv_race_sel">8</string>
     <string name="abbrv_race_code">R</string>
+
+    <string name="race_notification_title_template">Race: %1$s</string>
+
+    <!-- TODO: remove this placeholder text -->
+    <string name="race_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
+        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
+        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
+        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
+        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
+        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
+    </string>
+
+    <string name="action_share">Share</string>
+    <string name="action_reply">Reply</string>
 
 </resources>
