--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     <string name="lbl_update">Update</string>
 
     <!-- Menu labels. -->
+    <string name="lbl_delete">Delete</string>
+    <string name="lbl_delete_all">Delete All</string>
     <string name="lbl_refresh">Refresh</string>
     <string name="lbl_settings">Settings</string>
     <string name="lbl_add">New</string>
