--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <!-- Keys. -->
     <string name="key_edit_type">edit_type</string>
     <string name="key_edit_existing">edit_existing</string>
+    <string name="key_edit_existing_multi">edit_existing_multi</string>
     <string name="key_edit_copy">edit_copy</string>
 
     <!-- Preferences keys and title/summary values. -->
