--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,9 @@
     <!-- TextView labels. -->
     <string name="lbl_selections">Selections</string>
 
-    <!-- Dialog text. -->
-    <string name="multi_sel_line_1">Make a selection, click the Add button (max 4).</string>
-    <string name="multi_sel_line_2">Uncheck the Multi Select to Save.</string>
-    <string name="line_sep">line.separator</string>
+    <!-- Delete Dialog text. -->
+    <string name="title_delete_all">Delete All</string>
+    <string name="message_delete_all">Are you sure?</string>
 
     <!-- Menu labels. -->
     <string name="lbl_delete">Delete</string>
@@ -46,6 +45,7 @@
     <string name="lbl_settings">Settings</string>
     <string name="lbl_add">New</string>
     <string name="lbl_race_count">Count</string>
+    <string name="lbl_notifications">Notifications</string>
 
     <!-- Tags. -->
     <string name="tag_delete_all_dialog">tag_delete_all_dialog</string>
