--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="key_edit_type">edit_type</string>
     <string name="key_edit_existing">edit_existing</string>
     <string name="key_edit_existing_multi">edit_existing_multi</string>
-    <string name="key_edit_existing_multi_vals">edit_existing_multi_vals</string>
+    <string name="key_edit_existing_vals">edit_existing_multi_vals</string>
     <string name="key_edit_copy">edit_copy</string>
     <string name="key_multi_select_dialog_vals">key_multi_select_dialog</string>
     <string name="key_extras_dialog_vals">key_extras_dialog</string>
