--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,7 +133,9 @@
     <string name="key_network">key_network</string>
     <string name="network_title">Network</string>
     <string name="key_network_pref">key_network_pref</string>
+    <string name="key_network_pref_type">key_network_pref_val</string>
     <string name="network_summary">Update Race details from the Tatts network.</string>
+
     <!--&lt;!&ndash; Preferences Toast messages. &ndash;&gt;-->
     <!--<string name="race_code_msg">Default Race Code changed to</string>-->
     <!--<string name="city_code_msg">Default City Code changed to</string>-->
